# food_drying

./: .gitignore  GEMINI.md  README.md  branch_pr_demo.md  pyproject.toml  worktree_demo.md
app/core/: config.py  logger.py  theme.py
app/services/: camera_service.py  collection_service.py  inference_service.py  uart_service.py
app/ui/: camera_preview_window.py  main_window.py
app/ui/panels/: __init__.py  collection_panel.py  hardware_panel.py  inference_panel.py
scripts/: install_rpi_fonts.sh  uart_probe.py
